openshift/3.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"$APP_NAME:latest","namespace":"$NAME_SPACE"},"fieldPath":"spec.template.spec.containers[?(@.name==\"$APP_NAME\")].image","pause":"false"}]
  name: $APP_NAME
  namespace: $NAME_SPACE
  labels:
    app: $APP_NAME
    app.kubernetes.io/part-of: $APP_NAME_LABEL
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: $APP_NAME
        deploymentconfig: $APP_NAME
    spec:
      containers:
        - name: $APP_NAME
          image: >-
            image-registry.openshift-image-registry.svc:5000/$NAME_SPACE/$APP_NAME:latest
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 64Mi
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  progressDeadlineSeconds: 600
status:
  observedGeneration: 47
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
